Add helpers to body template

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -2,6 +2,10 @@
     <div class="container">
       <header>
         <h1>Todo List</h1>
+        <label class="hide-completed">
+          <input type="checkbox" />
+          Hide Completed Tasks
+        </label>
       <form class="new-task">
         <input type="text" name="text" placeholder="Type to add new tasks" />
       </form>
@@ -16,6 +20,3 @@
     </div>
   </body>
 
-  <template name="task">
-    <li>{{text}}</li>
-  </template>
